--- a/modules/openapi-generator/src/main/resources/Java/libraries/native/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/native/pom.mustache
@@ -248,13 +248,13 @@
             <version>${jakarta-annotation-version}</version>
             <scope>provided</scope>
         </dependency>
-        {{#hasFormParams}}
+        {{#hasFormParamsInSpec}}
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
             <version>${httpmime-version}</version>
         </dependency>
-        {{/hasFormParams}}
+        {{/hasFormParamsInSpec}}
 
         <!-- test dependencies -->
         <dependency>
@@ -280,9 +280,9 @@
         {{^useJakartaEe}}
         <jakarta-annotation-version>1.3.5</jakarta-annotation-version>
         {{/useJakartaEe}}
-        {{#hasFormParams}}
+        {{#hasFormParamsInSpec}}
         <httpmime-version>4.5.13</httpmime-version>
-        {{/hasFormParams}}
+        {{/hasFormParamsInSpec}}
         <junit-version>4.13.2</junit-version>
         <spotless.version>2.27.2</spotless.version>
     </properties>
