use scheme from base address

--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/api.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/api.mustache
@@ -272,7 +272,7 @@ namespace {{packageName}}.{{apiPackage}}
                     {{^servers}}
                     uriBuilder.Host = HttpClient.BaseAddress{{nrt!}}.Host;
                     uriBuilder.Port = HttpClient.BaseAddress{{nrt!}}.Port;
-                    uriBuilder.Scheme = ClientUtils.SCHEME;
+                    uriBuilder.Scheme = HttpClient.BaseAddress{{nrt!}}.Scheme;
                     uriBuilder.Path = ClientUtils.CONTEXT_PATH + "{{path}}";
 
                     {{/servers}}
