--- a/modules/openapi-generator/src/main/resources/n4js/api.mustache
+++ b/modules/openapi-generator/src/main/resources/n4js/api.mustache
@@ -30,7 +30,7 @@ import { {{classname}} } from '{{filename}}';
  * @response {{code}} [{{#dataType}}{{.}}{{/dataType}}{{^dataType}}undefined{{/dataType}}] {{message}}
  {{/responses}}
  */
-export public async function {{{classname}}}__{{{nickname}}}(fe : ApiExecuterI, {{#allParams}}{{{paramName}}}: {{{dataType}}}{{^required}}={{/required}}{{^-last}}, {{/-last}}{{/allParams}}) : Promise<{{#returnType}}{{.}}{{/returnType}}{{^returnType}}undefined{{/returnType}}, Object{{#vendorExtensions}}{{#errResponses.size}} | ApiError<{{#errResponses}}{{^-last}} | {{/-last}}{{{.}}}{{/errResponses}}>{{/errResponses.size}}{{/vendorExtensions}}> {
+export public async function {{{classname}}}__{{{nickname}}}(fe : ApiExecuterI, {{#allParams}}{{{paramName}}}: {{{dataType}}}{{^required}}={{/required}}{{^-last}}, {{/-last}}{{/allParams}}) : Promise<{{#returnType}}{{.}}{{/returnType}}{{^returnType}}undefined{{/returnType}}, Object{{#vendorExtensions}}{{#responses4xx.0}} | ApiError<{{#responses4xx}}{{{baseType}}}{{^-last}} | {{/-last}}{{/responses4xx}}>{{/responses4xx.0}}{{/vendorExtensions}}> {
 {{#checkRequiredParamsNotNull}}    checkRequiredParams('{{{nickname}}}', { {{#allParams}}{{#required}}'{{{paramName}}}': {{{paramName}}}{{^-last}}, {{/-last}}{{/required}}{{/allParams}} });
 
 {{/checkRequiredParamsNotNull}}
@@ -42,10 +42,10 @@ export public async function {{{classname}}}__{{{nickname}}}(fe : ApiExecuterI, 
         '{{baseName}}': {{{paramName}}}{{^-last}},{{/-last}} {{/headerParams}}};
     const _body = {{^bodyParam}}undefined{{/bodyParam}}{{#bodyParam}}{{#vars.empty}}{{{paramName}}}{{/vars.empty}}{{^vars.empty}}{{#checkSuperfluousBodyProps}}cleanCopyBody({{{paramName}}}{{#vars}}, '{{{baseName}}}'{{/vars}}){{/checkSuperfluousBodyProps}}{{^checkSuperfluousBodyProps}}{{{paramName}}}{{/checkSuperfluousBodyProps}}{{/vars.empty}}{{/bodyParam}};
 
-    {{#returnType}}return {{/returnType}}await fe.{{#returnType}}<{{.}}, {{#vendorExtensions}}{{^errResponses.size}}undefined{{/errResponses.size}}{{#errResponses.size}}{{#errResponses}}{{{.}}}{{^-last}} | {{/-last}}{{/errResponses}}{{/errResponses.size}}{{/vendorExtensions}}>{{/returnType}}exec(
+    {{#returnType}}return {{/returnType}}await fe.{{#returnType}}<{{.}}, {{#vendorExtensions}}{{^responses4xx.0}}undefined{{/responses4xx.0}}{{#responses4xx.0}}{{#responses4xx}}{{{baseType}}}{{^-last}} | {{/-last}}{{/responses4xx}}{{/responses4xx.0}}{{/vendorExtensions}}>{{/returnType}}exec(
         '{{httpMethod}}', '{{{basePathWithoutHost}}}' + '{{{path}}}',
         _pathParams, _queryParams, _headerParams,
-        {{#produces.0}}'{{{mediaType}}}'{{/produces.0}}{{^produces.0}}undefined{{/produces.0}},
+        {{#responses2xx.0}}'{{{mediaType}}}'{{/responses2xx.0}}{{^responses2xx.0}}undefined{{/responses2xx.0}},
         _body
     );
 }
