--- a/modules/openapi-generator/src/main/resources/kotlin-client/libraries/jvm-ktor/api.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-client/libraries/jvm-ktor/api.mustache
@@ -52,25 +52,25 @@ import com.fasterxml.jackson.databind.ObjectMapper
                         formData {
                     {{#formParams}}
                         {{#isFile}}
-                        {{{paramName}}}?.apply { it.append("{{{baseName}}}", {{{paramName}}}) }
+                        {{{paramName}}}?.apply { append("{{{baseName}}}", {{{paramName}}}) }
                         {{/isFile}}
                         {{^isFile}}
                         {{^isArray}}
                         {{^isString}}
                         {{^isNumber}}
-                        {{{paramName}}}?.apply { it.append("{{{baseName}}}", {{{paramName}}}.toString()) }
+                        {{{paramName}}}?.apply { append("{{{baseName}}}", {{{paramName}}}.toString()) }
                         {{/isNumber}}
                         {{#isNumber}}
-                        {{{paramName}}}?.apply { it.append("{{{baseName}}}", {{{paramName}}}) }
+                        {{{paramName}}}?.apply { append("{{{baseName}}}", {{{paramName}}}) }
                         {{/isNumber}}
                         {{/isString}}
                         {{#isString}}
-                        {{{paramName}}}?.apply { it.append("{{{baseName}}}", {{{paramName}}}) }
+                        {{{paramName}}}?.apply { append("{{{baseName}}}", {{{paramName}}}) }
                         {{/isString}}
                         {{/isArray}}
                         {{#isArray}}
                         for (int i=0; i < {{paramName}}.size(); i++) {
-                            {{{paramName}}}?.apply { it.append("{{{baseName}}}", {{{paramName}}}.get(i).toString()) }
+                            {{{paramName}}}?.apply { append("{{{baseName}}}", {{{paramName}}}.get(i).toString()) }
                         }
                         {{/isArray}}
                         {{/isFile}}
