better oneof, anyof support

--- a/modules/openapi-generator/src/main/resources/python-nextgen/model_oneof.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/model_oneof.mustache
@@ -40,15 +40,34 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
 
     @validator('actual_instance')
     def actual_instance_must_validate_oneof(cls, v):
+        instance = cls()
         error_messages = []
         match = 0
         {{#composedSchemas.oneOf}}
         # validate data type: {{{dataType}}}
-        if type(v) is not {{^isPrimitiveType}}{{/isPrimitiveType}}{{{dataType}}}:
+        {{#isContainer}}
+        try:
+            instance.{{vendorExtensions.x-py-name}} = v
+            match += 1
+        except ValidationError as e:
+            error_messages.append(str(e))
+        {{/isContainer}}
+        {{^isContainer}}
+        {{#isPrimitiveType}}
+        try:
+            instance.{{vendorExtensions.x-py-name}} = v
+            match += 1
+        except ValidationError as e:
+            error_messages.append(str(e))
+        {{/isPrimitiveType}}
+        {{^isPrimitiveType}}
+        if type(v) is not {{{dataType}}}:
             error_messages.append(f"Error! Input type `{type(v)}` is not `{{{dataType}}}`")
         else:
             match += 1
 
+        {{/isPrimitiveType}}
+        {{/isContainer}}
         {{/composedSchemas.oneOf}}
         if match > 1:
             # more than 1 match
@@ -89,6 +108,29 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
         {{/discriminator}}
         {{/useOneOfDiscriminatorLookup}}
         {{#composedSchemas.oneOf}}
+        {{#isContainer}}
+        # deserialize data into {{{dataType}}}
+        try:
+            # validation
+            instance.{{vendorExtensions.x-py-name}} = json.loads(json_str)
+            # assign value to actual_instance
+            instance.actual_instance = instance.{{vendorExtensions.x-py-name}} 
+            match += 1
+        except ValidationError as e:
+            error_messages.append(str(e))
+        {{/isContainer}}
+        {{^isContainer}}
+        {{#isPrimitiveType}}
+        # deserialize data into {{{dataType}}}
+        try:
+            # validation
+            instance.{{vendorExtensions.x-py-name}} = json.loads(json_str)
+            # assign value to actual_instance
+            instance.actual_instance = instance.{{vendorExtensions.x-py-name}}
+            match += 1
+        except ValidationError as e:
+            error_messages.append(str(e))
+        {{/isPrimitiveType}}
         {{^isPrimitiveType}}
         # deserialize data into {{{dataType}}}
         try:
@@ -97,6 +139,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
         except ValidationError as e:
             error_messages.append(str(e))
         {{/isPrimitiveType}}
+        {{/isContainer}}
         {{/composedSchemas.oneOf}}
 
         if match > 1:
