--- a/modules/openapi-generator/src/main/resources/Java/libraries/jersey2/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/jersey2/ApiClient.mustache
@@ -38,6 +38,7 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import org.glassfish.jersey.logging.LoggingFeature;
+import java.util.AbstractMap.SimpleEntry;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.Collection;
@@ -45,11 +46,14 @@ import java.util.Collections;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.HashMap;
-import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.Date;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 {{#jsr310}}
 import java.time.OffsetDateTime;
 {{/jsr310}}
@@ -85,72 +89,95 @@ public class ApiClient{{#jsr310}} extends JavaTimeFormatter{{/jsr310}} {
   protected String userAgent;
   private static final Logger log = Logger.getLogger(ApiClient.class.getName());
 
-  protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>({{#servers}}{{#-first}}Arrays.asList(
-{{/-first}}    new ServerConfiguration(
-      "{{{url}}}",
-      "{{{description}}}{{^description}}No description provided{{/description}}",
-      new HashMap<String, ServerVariable>(){{#variables}}{{#-first}} {{
-{{/-first}}        put("{{{name}}}", new ServerVariable(
-          "{{{description}}}{{^description}}No description provided{{/description}}",
-          "{{{defaultValue}}}",
-          new HashSet<String>(
-          {{#enumValues}}
-          {{#-first}}
-            Arrays.asList(
-          {{/-first}}
-              "{{{.}}}"{{^-last}},{{/-last}}
-          {{#-last}}
-            )
-          {{/-last}}
-          {{/enumValues}}
-          )
-        ));
-      {{#-last}}
-      }}{{/-last}}{{/variables}}
-    ){{^-last}},{{/-last}}
+  protected List<ServerConfiguration> servers = new ArrayList<>({{#servers}}{{#-first}}Arrays.asList(
+{{/-first}}          new ServerConfiguration(
+                  "{{{url}}}",
+                  "{{{description}}}{{^description}}No description provided{{/description}}",
+                  {{^variables}}
+                  new LinkedHashMap<>()
+                  {{/variables}}
+                  {{#variables}}
+                  {{#-first}}
+                  Stream.<Entry<String, ServerVariable>>of(
+                  {{/-first}}
+                          new SimpleEntry<>("{{{name}}}", new ServerVariable(
+                                  "{{{description}}}{{^description}}No description provided{{/description}}",
+                                  "{{{defaultValue}}}",
+                                  {{#enumValues}}
+                                  {{#-first}}
+                                  new LinkedHashSet<>(Arrays.asList(
+                                  {{/-first}}
+                                          "{{{.}}}"{{^-last}},{{/-last}}
+                                  {{#-last}}
+                                  ))
+                                  {{/-last}}
+                                  {{/enumValues}}
+                          )){{^-last}},{{/-last}}
+                  {{#-last}}
+                  ).collect(Collectors.toMap(Entry::getKey, Entry::getValue, (a, b) -> a, LinkedHashMap::new))
+                  {{/-last}}
+                  {{/variables}}
+          ){{^-last}},{{/-last}}
   {{#-last}}
   ){{/-last}}{{/servers}});
   protected Integer serverIndex = 0;
   protected Map<String, String> serverVariables = null;
-  protected Map<String, List<ServerConfiguration>> operationServers = new HashMap<String, List<ServerConfiguration>>() {{
+  {{^hasOperationServers}}
+  protected Map<String, List<ServerConfiguration>> operationServers = new HashMap<>();
+  {{/hasOperationServers}}
+  {{#hasOperationServers}}
+  protected Map<String, List<ServerConfiguration>> operationServers;
+
+  {
+    Map<String, List<ServerConfiguration>> operationServers = new HashMap<>();
     {{#apiInfo}}
     {{#apis}}
     {{#operations}}
     {{#operation}}
     {{#servers}}
     {{#-first}}
-    put("{{{classname}}}.{{{operationId}}}", new ArrayList<ServerConfiguration>(Arrays.asList(
+    operationServers.put("{{{classname}}}.{{{operationId}}}", new ArrayList<>(Arrays.asList(
     {{/-first}}
-      new ServerConfiguration(
-        "{{{url}}}",
-        "{{{description}}}{{^description}}No description provided{{/description}}",
-        new HashMap<String, ServerVariable>(){{#variables}}{{#-first}} {{
-{{/-first}}          put("{{{name}}}", new ServerVariable(
-            "{{{description}}}{{^description}}No description provided{{/description}}",
-            "{{{defaultValue}}}",
-            new HashSet<String>(
-            {{#enumValues}}
-            {{#-first}}
-              Arrays.asList(
-            {{/-first}}
-                "{{{.}}}"{{^-last}},{{/-last}}
-            {{#-last}}
-              )
-            {{/-last}}
-            {{/enumValues}}
-            )
-          ));
-        {{#-last}}
-        }}{{/-last}}{{/variables}}
-      ){{^-last}},{{/-last}}
+            new ServerConfiguration(
+                    "{{{url}}}",
+                    "{{{description}}}{{^description}}No description provided{{/description}}",
+                    {{^variables}}
+                    new LinkedHashMap<>()
+                    {{/variables}}
+                    {{#variables}}
+                    {{#-first}}
+                    Stream.<Entry<String, ServerVariable>>of(
+                    {{/-first}}
+                            new SimpleEntry<>("{{{name}}}", new ServerVariable(
+                                    "{{{description}}}{{^description}}No description provided{{/description}}",
+                                    "{{{defaultValue}}}",
+                                    {{#enumValues}}
+                                    {{#-first}}
+                                    new LinkedHashSet<>(Arrays.asList(
+                                    {{/-first}}
+                                            "{{{.}}}"{{^-last}},{{/-last}}
+                                    {{#-last}}
+                                    ))
+                                    {{/-last}}
+                                    {{/enumValues}}
+                            )){{^-last}},{{/-last}}
+                    {{#-last}}
+                    collect(Collectors.toMap(Entry::getKey, Entry::getValue, (a, b) -> a, LinkedHashMap::new))
+                    {{/-last}}
+                    {{/variables}}
+            ){{^-last}},{{/-last}}
     {{#-last}}
-    )));{{/-last}}
+    )));
+    {{/-last}}
     {{/servers}}
     {{/operation}}
     {{/operations}}
     {{/apis}}
     {{/apiInfo}}
-  }};
+    this.operationServers = operationServers;
+  }
+
+  {{/hasOperationServers}}
   protected Map<String, Integer> operationServerIndex = new HashMap<String, Integer>();
   protected Map<String, Map<String, String>> operationServerVariables = new HashMap<String, Map<String, String>>();
   protected boolean debugging = false;
