--- a/modules/openapi-generator/src/main/resources/JavaSpring/nullableDataType.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaSpring/nullableDataType.mustache
@@ -1,1 +1,1 @@
-{{#openApiNullable}}{{#isNullable}}JsonNullable<{{{datatypeWithEnum}}}>{{/isNullable}}{{^isNullable}}{{{datatypeWithEnum}}}{{/isNullable}}{{/openApiNullable}}{{^openApiNullable}}{{{datatypeWithEnum}}}{{/openApiNullable}}
+{{#openApiNullable}}{{^required}}JsonNullable<{{{datatypeWithEnum}}}>{{/required}}{{#required}}{{{datatypeWithEnum}}}{{/required}}{{/openApiNullable}}{{^openApiNullable}}{{{datatypeWithEnum}}}{{/openApiNullable}}
