--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/models.dart.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/models.dart.mustache
@@ -1,9 +1,20 @@
 //ignore_for_file: invalid_annotation_target
 import 'package:freezed_annotation/freezed_annotation.dart';
+import 'dart:convert';
 
 part 'models.freezed.dart';
 part 'models.g.dart';
 
+part 'primitive_union_types.dart';
 {{! Add part deifinition for all models}}
 {{#models}}{{#model}}part '{{classFilename}}.dart';{{/model}}{{/models}}
 
+/// A typedef used in the deserialization of OneOf and AnyOf
+/// models when no discriminator mapping is provided.
+typedef FromJsonMethodType<T> = T Function(Map<String, dynamic>);
+
+/// Deserialization error types for OneOf and AnyOf types.
+enum DeserializationErrorType {
+    MoreThanOneTypeSatisfied,
+    UnKnownType,
+}
