--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/class_primitive_union_extensions.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/class_primitive_union_extensions.mustache
@@ -2,10 +2,14 @@
     {{^vendorExtensions.x-is-child}}
         {{^hasDiscriminatorWithNonEmptyMapping}}
             {{#anyOf}}
-                {{#PrimitiveExtension}}{{{.}}}{{/PrimitiveExtension}}
+                {{#PrimitiveCollectionsExtension}}
+                    {{{.}}}
+                {{/PrimitiveCollectionsExtension}}
             {{/anyOf}}
             {{#oneOf}}
-                {{#PrimitiveExtension}}{{{.}}}{{/PrimitiveExtension}}
+                {{#PrimitiveCollectionsExtension}}
+                    {{{.}}}
+                {{/PrimitiveCollectionsExtension}}
             {{/oneOf}}
         {{/hasDiscriminatorWithNonEmptyMapping}}
     {{/vendorExtensions.x-is-child}}
