--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/enum_inline.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/enum_inline.mustache
@@ -1,11 +1,11 @@
 {{#description}}/// {{{description}}}{{/description}}
 @JsonEnum(valueField: 'value')
-enum {{classname}} {
+enum {{enumName}} {
     {{#allowableValues}}
         {{#enumVars}}
             {{{name}}}(value: {{#isString}}r{{/isString}}{{{value}}}),
         {{/enumVars}}
-        const {{classname}}({this.value});
+        const {{enumName}}({this.value});
         final String value;
     {{/allowableValues}}
 }
