--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/enum_inline.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/enum_inline.mustache
@@ -3,9 +3,9 @@
 enum {{enumName}} {
     {{#allowableValues}}
         {{#enumVars}}
-            {{{name}}}(value: {{#isString}}r{{/isString}}{{{value}}}),
+            {{{name}}}(value: {{#isString}}r{{/isString}}{{{value}}}){{^-last}},{{/-last}}{{#-last}};{{/-last}}
         {{/enumVars}}
-        const {{enumName}}({this.value});
+        const {{enumName}}({required this.value});
         final String value;
     {{/allowableValues}}
 }
