Capitalise auth scheme irrespective of token_type capitalisation

--- a/modules/openapi-generator/src/main/resources/csharp-netcore/auth/OAuthAuthenticator.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/auth/OAuthAuthenticator.mustache
@@ -81,7 +81,14 @@ namespace {{packageName}}.Client.Auth
                 .AddParameter("client_id", _clientId)
                 .AddParameter("client_secret", _clientSecret);
             var response = await client.PostAsync<TokenResponse>(request);
-            return $"{response.TokenType} {response.AccessToken}";
+            
+            switch (response.TokenType?.ToLower())
+            {
+                case "bearer":
+                    return $"Bearer {response.AccessToken}";
+                default:
+                    return $"{response.TokenType} {response.AccessToken}";
+            }
         }
     }
 }
