--- a/modules/openapi-generator/src/main/resources/python-nextgen/pyproject.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/pyproject.mustache
@@ -17,7 +17,7 @@ python-dateutil = ">=2.8.2"
 aiohttp = ">= 3.8.4"
 {{/asyncio}}
 {{#tornado}}
-tornado>= ">=4.2,<5"
+tornado = ">=4.2,<5"
 {{/tornado}}
 {{#hasHttpSignatureMethods}}
 pem = ">= 19.3.0"
